--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,11 @@
+[project]
+name = "lzw-compression"
+version = "0.1.0"
+dependencies = [
+    "Pillow",
+    "numpy",
+]
+
 [tool.ruff]
 line-length = 100
 target-version = "py312"
